# auth-portal

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  typos.toml
src/: config.rs  main.rs  server.rs  token.rs  utils.rs
src/static/: login.html  pico.min.css
