[package]
name = "auth-portal"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
base32 = "0.4"
clap = { version = "3.2", features = ["derive", "env"] }
cookie = "0.16"
dialoguer = "0.10"
envy = "0.4"
handlebars = "4.3"
http = "0.2"
log = "0.4"
picky = "6.3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
simple_logger = "2.2"
time = "0.3"
tiny_http = "0.11"
toml = "0.5"
totp-lite = "2.0"
qr2term = "0.3"
ctrlc = "3.2"
